		to show a change of size epsilon, which is the smallest increment the user 
		can make by dragging the slider. Epsilon is determined by the range of the 
		slider and its width, in pixels.
	Modified EdgePortrayal2D to allow the width of the triangle or line to change depending
		on the value of the Edge.
	Documentation fixes to sim.util.Distribution [CERN's not very careful].  Thanks to 
		Ben Stabile <bennett.stabile@GMAIL.COM>
	Added sealing to the Schedule, deprecated pushToAfterSimulation, and made SimState.kill()
		seal the schedule rather than push it.  This allows remaining non-cleared events
		after kill() to run in the current timestep rather than in AFTER_SIMULATION.
	Modified the scheduling functions so that they return FALSE when the schedule cannot
		accept any more events -- it's at AFTER_SIMULATION or is sealed.  Other invalid
		situations (invalid times, invalid Steppables) still throw an exception.
	Modified Console so that it updates inspectors one last time prior to stopping them.
	Modified ChartGenerator so that the DataSetChangeEvent is fired prior to writing to
		the movie (so any additional modifications to the chart are reflected in that
		movie frame).
	Modifications to ChartGenerator to make it easier to create charts as displays which can
		be used to generate movies.  Update the howto.html documentation to reflect this.
	Revised the SimState constructors -- making deprecated and private constructors protected.
		This makes it easier to use MASON with other toolkits (such as ECJ) which are
		in control of the random number generator.
	Deleted the GUIState.guiObjects variable, created a new variable called 'storage', which
		stores global elements by key.
	Charting inspectors now set their chart titles and axis labels to more useful things
	It's a known bug in JFreeChart: if you have multiple series on a chart, and they're named
		the same name, then only the first one controls the auto range.  :-(