@@ -683,20 +683,32 @@ public class SimpleController implements Controller
     /** Stops all inspectors.  If killDraggedOutWindowsToo is true, then the detatched inspectors are stopped as well. */
     public void stopAllInspectors(boolean killDraggedOutWindowsToo)
         {
+		// update all the inspectors before we delete some of them, so they get written out
+		// if necessary.
+		Iterator i = allInspectors.keySet().iterator();
+		while(i.hasNext())
+			{
+			Inspector insp = (Inspector)(i.next());
+			insp.updateInspector();  // one last time
+			insp.repaint();
+			}
+
+		// kill all the inspectors in the inspector window for sure
         // inspectors may get stop() called on them multiple times
         for(int x=0;x<inspectorStoppables.size();x++)
             {
-            Stoppable temp = ((Stoppable)(inspectorStoppables.elementAt(x)));
-            if (temp!=null) temp.stop();  // stop all inspectors
+            Stoppable stopper = ((Stoppable)(inspectorStoppables.elementAt(x)));
+            if (stopper!=null) stopper.stop();
             }
 
+		// possibly kill all inspectors detached in their own windows.
         if (killDraggedOutWindowsToo)
             {
-            Iterator i = allInspectors.keySet().iterator();
+			i = allInspectors.keySet().iterator();
             while(i.hasNext())
                 {
-                Stoppable stopper = (Stoppable)(((WeakReference)allInspectors.get(i.next())).get());
-                if (stopper != null) stopper.stop();
+                Stoppable stopper = (Stoppable)(allInspectors.get(insp));
+				if (stopper != null) stopper.stop();
                 }
             }
         }
